[package]
name = "solar_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"
winapi = { version = "0.3", features = [
  "winuser", "wingdi", "winbase", "libloaderapi", "processthreadsapi",
  "errhandlingapi", "winerror", "commctrl", "sysinfoapi", "shobjidl", "combaseapi",
  "commdlg", "d2d1", "objbase", "dwrite", "winnls", "shellapi", "wincodec", "stringapiset"] }
rand = {version = "0.8.5", features = ["std_rng"]}
winput = "0.2.5"
uuid = { version = "1.4.1" , features = [ "v4", "fast-rng" ] }
glam = "0.24.2"